--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,6 +15,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      window.onload = function(){
+        let root = document.getElementById("root");
+        root.style.height = window.innerHeight +"px";
+        root.style.width = window.innerWidth +"px";
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
