--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,15 +15,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script>
-      window.onload = function(){
-        let root = document.getElementById("root");
-        root.style.height = window.innerHeight +"px";
-        root.style.width = window.innerWidth +"px";
-      }
-    </script>
   </head>
-  <body>
+  <body style="overflow-y: scroll;">
     <div id="root"></div>
     <!--
       This HTML file is a template.
